syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package greet;

option csharp_namespace = "GrpcService";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc StreamingFromServer (HelloRequest) returns (stream HelloResponse);
  rpc StreamingFromClient (stream HelloRequest) returns (HelloResponse);
  rpc StreamingBothWays (stream HelloRequest) returns (stream HelloResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  int32 age = 2;
  map<string, string> attributes = 3;
}

// The response message containing the greetings.
message HelloResponse {
  string message = 1;
  google.protobuf.StringValue description = 2;
  google.protobuf.Timestamp sent_date = 3;
  repeated string synonyms = 4;
}